Revert changes only intended to 11.0.x since they change the API